--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="Index.html">
+        <a class="navbar-brand" href="www.microstrake.com">
           <img src="./assets/logo.png">
           <i class="fas  fa-2x mx-3"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -30,7 +30,7 @@
           <div class="mr-auto"></div>
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">HOME
+              <a class="nav-link" href="www.microstrake.com">HOME
                 <span class="sr-only">(current)</span>
               </a>
             </li>
