--- a/services.html
+++ b/services.html
@@ -596,7 +596,7 @@
   <header>
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="Index.html">
+        <a class="navbar-brand" href="index.html">
           <img src="../assets/logo.png">
           <i class="fas  fa-2x mx-3"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -607,7 +607,7 @@
           <div class="mr-auto"></div>
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="Index.html">HOME
+              <a class="nav-link" href="index.html">HOME
                 <span class="sr-only">(current)</span>
               </a>
             </li>
