--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header>
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
           <img src="./assets/logo.png">
           <i class="fas  fa-2x mx-3"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -41,7 +41,7 @@
           <div class="mr-auto"></div>
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">HOME
+              <a class="nav-link" href="">HOME
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -289,7 +289,7 @@
       </div>
 
       <div class="container-btn">
-        <a href="services.html"><button class="butex"><span>Explore More </span></button></a>
+        <a href="services"><button class="butex"><span>Explore More </span></button></a>
       </div>
 
     </section>
