--- a/services.html
+++ b/services.html
@@ -596,7 +596,7 @@
   <header>
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="">
           <img src="../assets/logo.png">
           <i class="fas  fa-2x mx-3"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
