--- a/services.html
+++ b/services.html
@@ -607,7 +607,7 @@
           <div class="mr-auto"></div>
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="microstrake.com">HOME
+              <a class="nav-link" href="">HOME
                 <span class="sr-only">(current)</span>
               </a>
             </li>
