--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="/">
-          <img src="./assets/logo.png">
+          <img src="./assets/logo.webp">
           <i class="fas  fa-2x mx-3"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -160,7 +160,7 @@
       <h1 class="tit f-h-size">SERVICES</h1>
       <div class="service-container" id="ld">
         <div class="ser-left">
-          <img title='credit- icons by "icons8"' src="./img/icons/logo.png">
+          <img title='credit- icons by "icons8"' src="./img/icons/logo.webp">
         </div>
         <div class="ser-right col-md-6">
           <h1>LOGO DESIGNING</h1>
@@ -173,7 +173,7 @@
 
       <div class="service-container">
         <div class="ser-left " id="wd">
-          <img title='credit- icons by "icons8"' src="./img/icons/webdev.png">
+          <img title='credit- icons by "icons8"' src="./img/icons/webdev.webp">
         </div>
         <div class="ser-right col-md-6 ">
           <h1 class="webdev">WEBSITE DEVELOPMENT</h1>
@@ -189,7 +189,7 @@
 
       <div class="service-container">
         <div class="ser-left" id="ad">
-          <img title='credit- icons by "icons8"' src="./img/icons/app.png">
+          <img title='credit- icons by "icons8"' src="./img/icons/app.webp">
         </div>
         <div class="ser-right col-md-6">
           <h1>APP DEVELOPMENT</h1>
@@ -202,7 +202,7 @@
 
       <div class="service-container">
         <div class="ser-left" id="dm">
-          <img title='credit- icons by "icons8"' src="./img/icons/seo.png">
+          <img title='credit- icons by "icons8"' src="./img/icons/seo.webp">
         </div>
         <div class="ser-right col-md-6">
           <h1>DIGITAL MARKETING</h1>
@@ -217,7 +217,7 @@
 
       <div class="service-container" id="ve">
         <div class="ser-left ">
-          <img title='credit- icons by "icons8"' src="./img/icons/video.png">
+          <img title='credit- icons by "icons8"' src="./img/icons/video.webp">
         </div>
         <div class="ser-right col-md-6">
           <h1 class="video">VIDEO EDITING</h1>
@@ -230,7 +230,7 @@
 
       <div class="service-container" id="bt">
         <div class="ser-left ">
-          <img title='credit- icons by "icons8"' src="./img/icons/tieup.png">
+          <img title='credit- icons by "icons8"' src="./img/icons/tieup.webp">
         </div>
         <div class="ser-right col-md-6 ">
           <h1 class="tieup">BRAND TIEUP</h1>
@@ -245,7 +245,7 @@
 
       <div class="service-container" id="tb">
         <div class="ser-left ">
-          <img title='credit- icons by "icons8"' src="./img/icons/train.png">
+          <img title='credit- icons by "icons8"' src="./img/icons/train.webp">
         </div>
         <div class="ser-right col-md-6 ">
           <h1 class="tieup">TRAIN BRANDING</h1>
@@ -261,7 +261,7 @@
 
       <div class="service-container">
         <div class="ser-left ">
-          <img title='credit- icons by "icons8"' src="./img/icons/bus.png">
+          <img title='credit- icons by "icons8"' src="./img/icons/bus.webp">
         </div>
         <div class="ser-right col-md-6 " id="bb">
           <h1 class="tieup">BUS BRANDING</h1>
@@ -274,7 +274,7 @@
 
       <div class="service-container">
         <div class="ser-left ">
-          <img title='credit- icons by "icons8"' src="./img/icons/rixa.png">
+          <img title='credit- icons by "icons8"' src="./img/icons/rixa.webp">
         </div>
         <div class="ser-right col-md-6" id="abc">
           <h1 class="tieup">AUTO & CAB BRANDING</h1>
@@ -309,7 +309,7 @@
           <div class="sliders owl-carousel">
             <div class="testimonial">
               <div class="test-info">
-                <img class="test-pic" src="../img/alim.jpg" alt="">
+                <img class="test-pic" src="../img/alim.webp" alt="">
                 <div class="test-name">
                   <span>Asfaq , Alimimpex</span>
                   30% increase in International Clients
@@ -322,7 +322,7 @@
 
             <div class="testimonial">
               <div class="test-info">
-                <img class="test-pic" src="../img/new.jpg" alt="">
+                <img class="test-pic" src="../img/new.webp" alt="">
                 <div class="test-name">
                   <span>Luke Powell, BeastKingAthletics</span>
                   My brand’s best Digital Campaign
@@ -335,7 +335,7 @@
 
             <div class="testimonial">
               <div class="test-info">
-                <img class="test-pic" src="../img/dr prag.jpg" alt="">
+                <img class="test-pic" src="../img/dr prag.webp" alt="">
                 <div class="test-name">
                   <span>Dr Parag Tapre, Mauli Hospital</span>
                   Amazing Service
@@ -348,7 +348,7 @@
 
             <div class="testimonial" >
               <div class="test-info">
-                <img class="test-pic" src="../img/biryani.jpg" alt="">
+                <img class="test-pic" src="../img/biryani.webp" alt="">
                 <div class="test-name">
                   <span>Biryani By Kilo
                   </span>
@@ -361,7 +361,7 @@
             </div>
             <div class="testimonial">
               <div class="test-info">
-                <img class="test-pic" src="../img/monster.jpg" alt="">
+                <img class="test-pic" src="../img/monster.webp" alt="">
                 <div class="test-name">
                   <span>MONSTER ENERGY
                   </span>
@@ -375,7 +375,7 @@
             </div>
             <div class="testimonial">
               <div class="test-info">
-                <img class="test-pic" src="../img/exel.jpg" alt="">
+                <img class="test-pic" src="../img/exel.webp" alt="">
                 <div class="test-name">
                   <span>EXCEL ACADEMY
                   </span>
