--- a/services.html
+++ b/services.html
@@ -597,7 +597,7 @@
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="/">
-          <img src="../assets/logo.png">
+          <img src="../assets/logo.webp">
           <i class="fas  fa-2x mx-3"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -664,28 +664,28 @@
       <h1>WEBSITE DESIGNING</h1>
       <div class="cen">
         <div class="service">
-          <img src="../img/icons/corporate.jpg" alt="corporate">
+          <img src="../img/icons/corporate.webp" alt="corporate">
           <h2>Corporate Profile</h2>
           <p>Corporate profile brings your story in front of the world. It builds and promotes your brand in an unique
             way.</p>
         </div>
 
         <div class="service">
-          <img src="../img/icons/reralestate.jpg" alt="reralestate">
+          <img src="../img/icons/reralestate.webp" alt="reralestate">
           <h2>Real Estate Profile</h2>
           <p>Every Real Estate dealer needs a platform to build awareness, generate quality leads and increase
             credibility. This is done best with the help of a Real estate profile.</p>
         </div>
 
         <div class="service">
-          <img src="../img/icons/food.jpg" alt="FOOD & BEVERAGE PROFILE">
+          <img src="../img/icons/food.webp" alt="FOOD & BEVERAGE PROFILE">
           <h2>Food & Beverage Profile</h2>
           <p>To be ahead of any competitor, this is the best time to build your brand’s profile where everybody is
             lagging at it. This will leverage the best ever publicity and audience trust on your brand.</p>
         </div>
 
         <div class="service">
-          <img src="../img/icons/faishion.jpg" alt="FASHION & LIFESTYLE PROFILE">
+          <img src="../img/icons/faishion.webp" alt="FASHION & LIFESTYLE PROFILE">
           <h2>Fashion & Lifestyle Profile</h2>
           <p>Just as design and style is important in fashion it is equally important in web design. Graphic designing
             creates a high end vibe for your brand resembling you. This will stimulate your consumer’s loyalty and
@@ -693,7 +693,7 @@
         </div>
 
         <div class="service">
-          <img src="../img/icons/automobile.jpg" alt="AUTOMOBILE PROFILE">
+          <img src="../img/icons/automobile.webp" alt="AUTOMOBILE PROFILE">
           <h2>Automobile Profile</h2>
           <p>We aim to build the best automobile site loading as fast as your vehicles. Caring and maintaining it is our
             habit. This will truly enhance your business.
@@ -717,35 +717,35 @@
       <h1>DIGITAL MARKETING</h1>
       <div class="cen">
         <div class="service">
-          <img src="../img/icons/seoo.jpg" alt="SEO">
+          <img src="../img/icons/seoo.webp" alt="SEO">
           <h2>SEO</h2>
           <p>SEO is not a cost but an investment to build your customer’s belief on your Brand. Search Engine’s top
             ranking ensures the top place of your brand in your customer’s heart.</p>
         </div>
 
         <div class="service">
-          <img src="../img/icons/sem.jpg" alt="SEM">
+          <img src="../img/icons/sem.webp" alt="SEM">
           <h2>SEM</h2>
           <p>SEM brings you on the top with fewer efforts. It builds your Brand awareness and brings in more qualified
             leads.</p>
         </div>
 
         <div class="service">
-          <img src="../img/icons/socialm.jpg" alt="SMM">
+          <img src="../img/icons/socialm.webp" alt="SMM">
           <h2>SMM</h2>
           <p>Social media builds relationships with your audience and brings loyalty to it. It is the best ever addition
             you can do to your PR strategy.</p>
         </div>
 
         <div class="service">
-          <img src="../img/icons/ppc.jpg" alt="PPC">
+          <img src="../img/icons/ppc.webp" alt="PPC">
           <h2>PPC</h2>
           <p>PPC cuts down your expenses on marketing and brings instant results. It is the best way to get targeted
             consumers and produce more revenue.</p>
         </div>
 
         <div class="service">
-          <img src="../img/icons/lead generation.jpg" alt="LEAD GENERATION">
+          <img src="../img/icons/lead generation.webp" alt="LEAD GENERATION">
           <h2>LEAD GENERATION
           </h2>
           <p>Lead Generation is the best way to know about your products new potential buyers. It generates your brand
@@ -753,7 +753,7 @@
         </div>
 
         <div class="service">
-          <img src="../img/icons/dataannalysis.jpg" alt="DATA ANALYSIS">
+          <img src="../img/icons/dataannalysis.webp" alt="DATA ANALYSIS">
           <h2>DATA ANALYSIS</h2>
           <p>Data Analysis helps you the best to solve problems and bring new innovations in your system. It increases
             accuracy and precision for targeting new potential customers.</p>
@@ -768,7 +768,7 @@
       <h1>VIDEO EDITING</h1>
       <div class="cen">
         <div class="service">
-          <img src="../img/icons/brandlaunch.jpg" alt="Brand LAUNCH">
+          <img src="../img/icons/brandlaunch.webp" alt="Brand LAUNCH">
           <h2>BRAND LAUNCH</h2>
           <p>Brand launch is all about introducing your brand or re-branding to the market,
             and brand launch video is most appropriate manner to reach maximum audience in this
@@ -777,7 +777,7 @@
         </div>
 
         <div class="service">
-          <img src="../img/icons/storytelling.jpg" alt="STORYTELLING">
+          <img src="../img/icons/storytelling.webp" alt="STORYTELLING">
           <h2>STORYTELLING</h2>
           <p>Video storytelling works so well because it draws people in, holding their
             attention spans and making them feel invested in what's happening.
@@ -786,7 +786,7 @@
         </div>
 
         <div class="service">
-          <img src="../img/icons/marketingstatigy.jpg" alt="MARKETING STRATEGY">
+          <img src="../img/icons/marketingstatigy.webp" alt="MARKETING STRATEGY">
           <h2>MARKETING STRATEGY</h2>
           <p>Video Marketing. Video marketing is using videos to promote and market your product or service,
             increase engagement on your digital and social channels, educate your consumers and customers,
@@ -802,7 +802,7 @@
       <h1>BRAND TIE-UPS</h1>
       <div class="cen">
         <div class="service">
-          <img src="../img/icons/musical.jpg" alt="MUSICAL CONCERTS">
+          <img src="../img/icons/musical.webp" alt="MUSICAL CONCERTS">
           <h2>MUSICAL CONCERTS</h2>
           <p>We bring the best venues to display your brand to give you an instant growth in audience. Musical concerts
             are the most reliable one’s for you.
@@ -810,14 +810,14 @@
         </div>
 
         <div class="service">
-          <img src="../img/icons/awardshow.jpg" alt="AWARD SHOWS">
+          <img src="../img/icons/awardshow.webp" alt="AWARD SHOWS">
           <h2>AWARD SHOWS</h2>
           <p>Just as you, your brand should be unique and premium. Award Shows give you the best platform to build that
             upper edge in it</p>
         </div>
 
         <div class="service">
-          <img src="../img/icons/comedy.png" alt="STANDUP COMEDY">
+          <img src="../img/icons/comedy.webp" alt="STANDUP COMEDY">
           <h2>STANDUP COMEDY</h2>
           <p>Standup is the most trustable way to build your brand’s relationship with your consumers. It will make your
             customers always happy while using your products.
@@ -825,7 +825,7 @@
         </div>
 
         <div class="service">
-          <img src="../img/icons/sport.jpg" alt="SPORT">
+          <img src="../img/icons/sport.webp" alt="SPORT">
           <h2>SPORT EVENTS</h2>
           <p>Got a product related to sports? We will bring the most reach and awareness through these events.</p>
         </div>
