--- a/services.html
+++ b/services.html
@@ -884,7 +884,7 @@
       <div class="right boxx">
         <h2>Contact Us</h2>
         <div class="content">
-          <form action="https://visibilityclients.000webhostapp.com/mail.php" method="post">
+              <form action="https://visibilityclients.000webhostapp.com/mail.php" method="post">
             <div class="name">
               <div class="text">Name *</div>
               <input type="text" required name="name">
@@ -907,31 +907,9 @@
             <div class="social">
               <a href="https://m.facebook.com/MicroStrake" target="_blank"><span class="fab fa-facebook-f"></span></a>
               <a href="https://twitter.com/microstrake" target="_blank"><span class="fab fa-twitter"></span></a>
-              <a href="https://www.instagram.com/microstrake_" target="_blank"><span
-                  class="fab fa-instagram"></span></a>
-              <a href="https://www.youtube.com/channel/UC_3ICYVyuuwXd7QQAfx6ZJA" target="_blank"><span
-                  class="fab fa-you<form action="https://visibilityclients.000webhostapp.com/mail.php" method="post">
-            <div class="name">
-              <div class="text">Name *</div>
-              <input type="text" required name="name">
-            </div>
-            <div class="Mobile-num">
-              <div class="text">Mobile *</div>
-              <input type="text" required name="no">
-            </div>
-            <div class="email">
-              <div class="text">Email *</div>
-              <input type="email" required name="eid">
-            </div>
-            <div class="msg">
-              <div class="text">Message *</div>
-              <textarea rows="2" cols="25" required name="msg"></textarea>
-            </div>
-            <div class="btn-send">
-              <button type="submit">Send</button>
-            </div>tube"></span></a>
-              <a href="https://www.linkedin.com/company/microstrake" target="_blank"><span
-                  class="fab fa-linkedin"></span></a>
+              <a href="https://www.instagram.com/microstrake_" target="_blank"><span class="fab fa-instagram"></span></a>
+              <a href="https://www.youtube.com/channel/UC_3ICYVyuuwXd7QQAfx6ZJA" target="_blank"><span class="fab fa-youtube"></span></a>
+              <a href="https://www.linkedin.com/company/microstrake" target="_blank"><span class="fab fa-linkedin"></span></a>
             </div>
           </form>
         </div>
