--- a/services.html
+++ b/services.html
@@ -831,7 +831,7 @@
         </div>
 
         <div class="service">
-          <img src="../img/icons/MOVIE.svg" alt="MOVIE-TRAILER">
+          <img src="../img/icons/MOVIE.webp" alt="MOVIE-TRAILER">
           <h2>MOVIE-TRAILER LAUNCH</h2>
           <p>We are eager to bring you in limelight! Branding you in such events is immensely profitable</p>
         </div>
