--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         </div>
         <div class="col-md-5 col-sm-12  h-25">
-          <img src="./assets/header-image.svg" alt="logo" />
+          <img src="./assets/header-image.webp" alt="logo" />
         </div>
       </div>
     </div>
